<resources>
    <string name="app_name">store</string>
    <string name="empty_list_msg">No hay Apps instaladas</string>
    <string name="str_toolbar_title">UNAM App Manager</string>
    <string name="str_menu_add_item">Agregar</string>
    <string name="str_menu_edit_item">Editar</string>
    <string name="str_name_app">Nombre de la app</string>
    <string name="str_name_developer">Nombre del desarrollador</string>
    <string name="str_app_details">Detalle de la app...</string>
    <string name="str_app_status">instalada / actualizada</string>
    <string name="str_save_button">Salvar</string>
    <string name="str_edit_button">Salvar</string>
    <string name="str_uninstall_button">Desinstalar</string>
    <string name="str_open_button">Abrir</string>
    <string name="str_update_button">Actualizar</string>
    <string name="dialog_confirm_delete">Confirmar desinstalación</string>
    <string name="btn_confirm_delete">Aceptar</string>
    <string name="btn_cancel_delete">Cancelar</string>
    <string name="notif_content_title">La app se desinstaló</string>
    <string name="notif_content_title_update">La app se actualizó</string>
    <string name="notif_content_text">Se ha completado la descarga</string>
    <string name="notif_content_text_update">Se ha completado la actualización</string>
    <string name="notif_content_info">Desinstalada</string>
    <string name="notif_content_info_update">Actualizada</string>
    <string name="notif_bigtext_style">Se ha completado la desinstalación\nGracias por usar \nkubo App Manager</string>
    <string name="notif_bigtext_style_update">Se ha completado la actualización\nGracias por usar \nkubo App Manager</string>
    <string name="notif_content_title_pre_exc">Desinstalando</string>
    <string name="notif_content_text_pre_exc">La app se está desinstalando</string>
    <string name="notif_content_title_pre_exc_update">Actualizando</string>
    <string name="notif_content_text_pre_exc_update">La app se está actualizando</string>
    <string name="app_status_unistalled">Desinstalada</string>
</resources>
