<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_name_app"
            android:hint="@string/str_name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_name_developer"
            android:hint="@string/str_name_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_app_details"
            android:inputType="textMultiLine"
            android:hint="@string/str_app_details"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <CheckBox
            android:layout_marginTop="16dp"
            android:id="@+id/check_app_status"
            android:text="@string/str_app_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/str_save_button"
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>