<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout = "@layout/toolbar"/>

    <include layout = "@layout/adapter_app_info"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:text="@string/str_uninstall_button"
        android:id="@+id/btn_uninstall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/str_open_button"
        android:id="@+id/btn_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/str_update_button"
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>