<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:minHeight="56dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_app_ic"
            android:src="@android:drawable/sym_def_app_icon"
            android:layout_margin="10dp"
            android:layout_width="56dp"
            android:layout_height="56dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name_app"
            android:layout_weight="1"
            android:hint="@string/str_name_app"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_name_developer"
            android:layout_weight="1"
            android:hint="@string/str_name_developer"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:gravity="left"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/adapter_app_status"
                android:text="@string/str_app_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_app_details"
            android:hint="@string/str_name_developer"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="top|left"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:layout_marginLeft="15dp"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>